# aLittleCode

./: .gitignore  CMakeLists.txt  README.md
MouseCoord/: CMakeLists.txt  globalhook.hpp  main.cpp  mc.cpp  mc.h
MyClock/: MyClock.pro  main.cpp  mainview.cpp  mainview.h
Server/: CMakeLists.txt
Server/src/: main.cpp
Server/src/controlcenter/: taskmanager.h  tcpserver.cpp  tcpserver.h
Server/src/utils/: err.h  shared.h
temp/: GUI自动工具.xmind  GUI自动测试工具优化重构设计文档.md
